# -Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md
android-app/: build.gradle  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-app/app/src/main/java/com/flam/rnd/: MainActivity.kt
android-app/app/src/main/java/com/flam/rnd/camera/: YuvUtils.kt
android-app/app/src/main/java/com/flam/rnd/gl/: SimpleGLRenderer.kt
android-app/app/src/main/java/com/flam/rnd/jni/: NativeProcessor.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
